--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "one-touch",
   "version": "1.0.0",
   "description": "Onetouch manage social platforms once",
-  "main": "index.js",
+  "main": "./bin/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node index.js"
+    "start": "node ./bin/server.js",
+    "start-dev":"nodemon ./bin/server.js"
   },
   "keywords": [
     "node.js"
@@ -13,6 +14,10 @@
   "author": "abdul waheed",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
