--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   "author": "abdul waheed",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-status-monitor": "^1.2.10",
-    "jsonwebtoken": "^8.5.1",
+    "body-parser": "1.19.0",
+    "dotenv": "8.2.0",
+    "express": "4.17.1",
+    "express-status-monitor": "1.2.10",
+    "jsonwebtoken": "8.5.1",
     "mongoose": "5.9.7",
-    "mongoose-unique-validator": "^2.0.3",
-    "morgan": "^1.10.0",
-    "winston": "^3.2.1"
+    "mongoose-unique-validator": "2.0.3",
+    "morgan": "1.10.0",
+    "winston": "3.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
