--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "1.19.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-status-monitor": "1.2.10",
