--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "abdul waheed",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -24,6 +25,8 @@
     "mongoose": "5.9.7",
     "mongoose-unique-validator": "2.0.3",
     "morgan": "1.10.0",
+    "node-fetch": "^2.6.0",
+    "request": "^2.88.2",
     "winston": "3.2.1"
   },
   "devDependencies": {
